--- a/notify/src/pages/register-page/Register.css
+++ b/notify/src/pages/register-page/Register.css
@@ -1,12 +1,5 @@
-.register-bg, .sign-in-bg{
-    background-image: url("../../images/map-background.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 100vh;
-}
 
-
-.sign-in-page-container{
+.register-page-container{
     /* border: 1px solid black; */
     width: 100%;
     max-width: 800px;
@@ -15,10 +8,10 @@
     justify-content: center;
 }
 
-.sign-in-box{
+.register-box{
     margin-top: 100px;
     width: 505px;
-    height: 400px;
+    height: 660px;
     flex-shrink: 0;
 
     border-radius: 20px;
@@ -26,7 +19,7 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
-.sign-in-box-container{
+.register-box-container{
     max-width: 465px;
     width: 100%;
     margin: 35px auto 0 auto;
@@ -37,13 +30,13 @@
     justify-content: center;
 }
 
-.sign-in-box-container form{
+.register-box-container form{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.sign-in-box-container input{
+.register-box-container input{
     width: 465px;
     height: 60px;
     flex-shrink: 0;
@@ -61,7 +54,7 @@
     margin-top: 25px;
 }
 
-.sign-in-box-container .sign-in-button{
+.register-box-container .register-button{
     width: 130px;
     height: 50px;
     flex-shrink: 0;
@@ -82,19 +75,19 @@
 
     }
 
-.sign-in-box-container .sign-in-button:hover{
+.register-box-container .register-button:hover{
     cursor: pointer;
     background-color: black;
 }
 
-.sign-in-box-line{
+.register-box-line{
     width: 100%;
     height: 1px;
     background: #E5E5E5;
     margin: 20px 0;
 }
 
-.sign-in-no-account-button{
+.register-no-account-button{
     color: #949494;
     font-size: 12px;
     font-style: normal;
@@ -105,7 +98,7 @@
     background: transparent;
 }
 
-.sign-in-no-account-button:hover{
+.register-no-account-button:hover{
     cursor: pointer;
     color: black;
 }
