--- a/notify/src/pages/About-us/about.css
+++ b/notify/src/pages/About-us/about.css
@@ -4,155 +4,75 @@
     box-sizing: border-box;
 }
 
-.container {
-    max-width: 1140px;
-    margin: 0 auto;
+.hero-about {
+    background-color: #f0f0f0; /* สีเทา */
+    padding: 50px;
 }
 
-nav{
-    padding: 1rem;
-    background-color: #00ccff;
-}
-
-.nav-con {
-    display: flex;
-    justify-content: space-between;
-}
-
-.logo a{
-    font-size: 2rem;
-    color: white;
-    text-decoration: none;
-}
-
-.menu{
-    display: flex;
-    list-style: none;
-    align-items: center;
-}
-
-.menu li{
-    margin: 0 1rem;
-}
-
-.menu li a {
-    color: #fff;
-    text-decoration: none;
-}
-
-.hero {
-    background-color: #f0f0f0;
-}
-
-.hero-con {
+.hero-con-about {
     display: flex;
 }
 
-.hero-info {
+.hero-info-about {
     width: 100%;
     padding: 2rem;
 }
 
-.hero-info h3 {
-    font-size: 2rem;
+.hero-info-about h3 {
+    /*font-family: Open Sans;*/
+    font-size: 70px;
 }
 
-.hero-info p {
+.hero-info-about p {
     margin: 1rem 0;
+    color: #202124;
+    /*font-family: Open Sans;*/
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 200;
+    line-height: normal;
 }
 
-.hero-info .hero-btn {
-    display: inline-block;
-    background-color: orange;
-    color: #fff;
-    padding: .5rem 1rem;
-    border-radius: 5px;
-    text-decoration: none;
-}
-
-.hero-img img{
+.hero-img-about img{
     width: 100%;
     padding: 2rem;
 }
 
-.blog {
+.blog-about {
     background: #ffffff;
 }
 
-.blog-con {
+.container-about {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-gap: 2rem;
+    grid-gap: 1rem;
+    margin-top: 150px;
+    align-items: center;
+    justify-content: center;
 }
 
-.blog-title{
+.blog-title-about{
     margin: 2rem 0;
 }
 
-.blog-item{
-    border-style: solid;
-    border-width: 1px;
-    border-color: black;
+.blog-item-about{
+    display: flex;
+    flex-direction: column; /* จัดวางเป็นแนวตั้ง */
+    align-items: center;    /* จัดวางกลางแนวนอน */
+    justify-content: center;/* จัดวางกลางแนวตั้ง */
+             /* กำหนดความสูงของ container */
 }
 
-.blog-item img {
+.blog-item-about img {
+    border-radius: 20px;
     width: 100;
 }
 
-.blog-item h4 {
+.blog-item-about h4 {
     margin-top: 1rem;
 }
 
-.blog-item p {
+.blog-item-about p {
     margin: 1rem 0;
 }
 
-.blog-item a {
-    display: inline-block;
-    color: #fff;
-    background-color: orange;
-    padding: 0.5rem 1rem;
-    text-decoration: none;
-    border-radius: 5px;
-}
-
-.footer-top {
-    margin-top: 2rem;
-    padding: 3rem;
-    background-color: #00ccff;
-    color: #fff;
-}
-
-.footer-top-con {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 2rem;
-}
-
-.footer-top-item-con {
-    display: flex;
-    margin: 1rem 0;
-}
-
-.footer-top-item-con .date {
-    background-color: #f0f0f0;
-    color: black;
-    padding: 0.5rem;
-    border-radius: 5px;
-    text-align: center;
-    margin-right: 10px;
-}
-
-.footer-top-item:nth-child(2) h4{
-    margin-bottom: 1rem;
-}
-
-.footer-top-item:nth-child(3) h4{
-    margin-bottom: 1rem
-}
-
-.footer-bottom-more{
-    background-color: #fff;
-    padding: 1rem;
-    text-align: center;
-}
