--- a/notify/src/components/AboutCard.css
+++ b/notify/src/components/AboutCard.css
@@ -1,22 +1,26 @@
-.about-card-container{
-    display: flex;
-    align-items: center;
-    /* justify-content: space-between; */
-}
+
 
 .about-card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px; /* 5px rounded corners */
-    margin-right: 2rem;
+    /* margin-right: 2rem; */
     overflow: hidden;
-    max-width: 300px;
+    max-width: 220px;
 }
 
 .about-card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 .about-card img{
-    max-width: 300px;
-    width: 100%;
+    object-fit: cover;
+    width: 230px;
+    height: 230px;
+}
+
+.about-card-container{
+    padding:13px 13px;  
+    height: 100%;
+    max-height: 70px;
+    
 }
