--- a/notify/src/pages/Emergency/emergency.css
+++ b/notify/src/pages/Emergency/emergency.css
@@ -34,7 +34,7 @@
     background: #ffffff;
 }
 
-.blog-con-emergency {
+.emergency-container-about {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 2rem;
