--- a/notify/src/components/ImageSlider.css
+++ b/notify/src/components/ImageSlider.css
@@ -1,19 +1,26 @@
 /* ImageSlider.css */
 
+.slide-container {
+    position: relative;
+    width: 100%;
+    height: 480px;
+    height: 75%;
+    /* background-color: aqua; */
+  }
+
 .slider {
-    border-radius: 15px;
+    border-radius: 20px 20px 0px 0px;
     overflow: hidden;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 6%;
-    height: 80%;
+    /* margin-top: 6%; */
+    height: 100%;
     width:  100%;
     background-color: white;
-    box-shadow: 0 4px 2px -2px rgb(200, 200, 200);
   }
   .slides {
-    width: 300%;
-    height: 350px;
+    width: 100%;
+    height: 450px;
     display: flex;
     transition: 2s;
   }
@@ -28,45 +35,33 @@
     object-position: center center;
     max-width: 750px;
   }
+
+  .description{
+    height: 15%;
+    border-radius: 0px 0px 20px 20px;
+    box-shadow: 0 4px 2px -2px rgb(200, 200, 200);
+  }
+
+  .navigation-container{
+    margin-top: 4%;
+  }
   
-  /* .navigation-manual {
-    position: absolute;
-    width: 930px;
-    margin-top: -40px;
+  .navigation-manual {
+    height: 5px;
     display: flex;
     justify-content: center;
   }
+
   .manual-btn {
-    border: 2px solid grey;
     padding: 5px;
     border-radius: 10px;
     cursor: pointer;
     transition: 1s;
+    background-color: #D9D9D9;
   }
   .manual-btn:not(:last-child) {
-    margin-right: 40px;
+    margin-right: 20px;
   }
-  .manual-btn.active,
-  .manual-btn:hover {
-    background: #ffb2a5;
+  .manual-btn.active {
+    background: #5F6368;
   }
-  
-  .navigation-auto {
-    position: absolute;
-    display: flex;
-    width: 930px;
-    justify-content: center;
-    margin-top: 310px;
-  }
-  .navigation-auto div {
-    border: 2px solid #ffb2a5;
-    padding: 5px;
-    border-radius: 10px;
-    transition: 1s;
-  }
-  .navigation-auto div:not(:last-child) {
-    margin-right: 40px;
-  }
-  .navigation-auto div.active {
-    background: #83d6e7;
-  } */
