--- a/notify/src/components/ImageSlider.css
+++ b/notify/src/components/ImageSlider.css
@@ -1,67 +1,86 @@
 /* ImageSlider.css */
 
 .slide-container {
-    position: relative;
-    width: 100%;
-    height: 480px;
-    height: 75%;
-    /* background-color: aqua; */
-  }
+  position: relative;
+  width: 100%;
+  height: 480px;
+  height: 75%;
+  /* background-color: aqua; */
+}
 
 .slider {
-    border-radius: 20px 20px 0px 0px;
-    overflow: hidden;
-    margin-left: auto;
-    margin-right: auto;
-    /* margin-top: 6%; */
-    height: 100%;
-    width:  100%;
-    background-color: white;
-  }
-  .slides {
-    width: 100%;
-    height: 450px;
-    display: flex;
-    transition: 2s;
-  }
-  .slide {
-    width: 100%;
-  }
-  .slide:not(.active) {
-    display: none;
-  }
-  .slide img {
-    object-fit: contain;
-    object-position: center center;
-    max-width: 750px;
-  }
+  border-radius: 20px 20px 0px 0px;
+  overflow: hidden;
+  margin-left: auto;
+  margin-right: auto;
+  height: 100%;
+  width: 100%;
+  background-color: white;
+}
 
-  .description{
-    height: 15%;
-    border-radius: 0px 0px 20px 20px;
-    box-shadow: 0 4px 2px -2px rgb(200, 200, 200);
-  }
+.slides {
+  width: 100%;
+  height: 420px;
+  display: flex;
+  transition: 2s;
+}
 
-  .navigation-container{
-    margin-top: 4%;
-  }
-  
-  .navigation-manual {
-    height: 5px;
-    display: flex;
-    justify-content: center;
-  }
+.slide {
+  width: 100%;
+}
 
-  .manual-btn {
-    padding: 5px;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: 1s;
-    background-color: #D9D9D9;
-  }
-  .manual-btn:not(:last-child) {
-    margin-right: 20px;
-  }
-  .manual-btn.active {
-    background: #5F6368;
-  }
+.slide:not(.active) {
+  display: none;
+}
+
+.slide img {
+  object-fit: contain;
+  object-position: center center;
+  max-width: 750px;
+}
+
+.description {
+  height: 60px;
+  width: 100%;
+  border-radius: 0px 0px 20px 20px;
+  box-shadow: 0 4px 2px -2px rgb(200, 200, 200);
+  display: flex;
+  justify-content: center;  
+}
+
+.description-paragraph {
+  width: 95%;
+  text-align: left;
+  font-size:medium;
+  overflow: hidden;
+  color: #202124;
+  /* background-color: aqua; */
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.navigation-container {
+  margin-top: 4%;
+}
+
+.navigation-manual {
+  height: 5px;
+  display: flex;
+  justify-content: center;
+}
+
+.manual-btn {
+  padding: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 1s;
+  background-color: #D9D9D9;
+}
+
+.manual-btn:not(:last-child) {
+  margin-right: 20px;
+}
+
+.manual-btn.active {
+  background: #5F6368;
+}
