--- a/notify/src/components/EmergencyCard.css
+++ b/notify/src/components/EmergencyCard.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 430px;
-  height: 280px;
+  height: 380px;
   max-height: 330px;
   background-color: var(--white);
   border-radius: 10px;
@@ -25,8 +25,8 @@
     height: 100%;
     border-radius: 10px;
     margin-bottom: 12px;
-    overflow: hidden;
-    background-color: rgb(165, 165, 165);
+    /*overflow: hidden;*/
+    /*background-color: rgb(165, 165, 165);*/
     display: flex;
     align-items: center;
     justify-content: center;
@@ -63,6 +63,7 @@
             "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
     color: #1797b8;
     cursor: default;
+    margin-top: 1rem;
   }
   
 
