--- a/notify/src/components/EmergencyCard.css
+++ b/notify/src/components/EmergencyCard.css
@@ -23,10 +23,8 @@
   .Emergency-card-image-container {
     width: 100%;
     height: 100%;
-    border-radius: 10px;
+    border-radius: 20px;
     margin-bottom: 12px;
-    /*overflow: hidden;*/
-    /*background-color: rgb(165, 165, 165);*/
     display: flex;
     align-items: center;
     justify-content: center;
@@ -39,8 +37,7 @@
   .Emergency-card-title {
     margin: 0;
     font-size: 17px;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-            "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font-family: "Open Sans";
     font-weight: 600;
     color: #1797b8;
     cursor: default;
@@ -58,9 +55,8 @@
     -webkit-line-clamp: 1;
     line-clamp: 1;
     margin: 0;
-    font-size: 20px;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-            "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font-size: 17px;
+    font-family: "Open Sans";
     color: #1797b8;
     cursor: default;
     margin-top: 1rem;
