--- a/notify/src/components/EmergencyCard.css
+++ b/notify/src/components/EmergencyCard.css
@@ -28,6 +28,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 10px;
   }
   
   .Emergency-video-icon {
