--- a/notify/src/pages/About-us/about.css
+++ b/notify/src/pages/About-us/about.css
@@ -79,4 +79,15 @@
     
 }
 
+.about-footer-bottom {
+    width: 100%;
+    padding: 20px;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    bottom: 0;
+    left: 0;
+    margin-top: 6rem;
+  }
+
 
