--- a/notify/src/pages/home/Home.css
+++ b/notify/src/pages/home/Home.css
@@ -17,16 +17,49 @@
 }
 
 .donate-body-right {
-    width: 30%;
     display: flex;
+    max-width: 30%;
+    height: 600px;
     flex-direction: column;
-    align-items: center;
+    /* background-color: aqua; */
 }
 
-.detail-block {
-    border: 1px solid black;
-    width: 50%;
-    height: 500px;
-    margin: 5%;
-    box-shadow: 0 4px 2px -2px rgb(200, 200, 200);
+.show-detail-container{
+    height: 660px;
+    position: relative;
+    width: 532px;
+    border-radius: 20px 20px 20px 20px;
+    box-shadow: 0 6px 10px -2px rgb(200, 200, 200);
+    background-color: white;
+}
+
+.show-detail-head{
+    display: flex;
+}
+
+.show-detail-icon{
+    width: 50px;
+    height: 50px;
+}
+
+.title{
+    font-weight: bold;
+    font-size: 20px;
+    color: #202124;
+}
+
+.sub-title{
+    font-size: 14px;
+    color: #5F6368;
+}
+
+.show-detail-body-title{
+    font-weight: 600;
+    font-size: 14px;
+    color: #202124;
+}
+
+.show-detail-body-detail{
+    font-size: 14px;
+    color: #5F6368;
 }
