--- a/notify/src/pages/home/Home.css
+++ b/notify/src/pages/home/Home.css
@@ -1,17 +1,31 @@
 .home-page-container {
     width: 100%;
-    max-width: 1800px;;
+    max-width: 1800px;
     margin: 0 auto;
 }
 
 .home-body{
+    margin-top: 60px;
     display: flex;
+    justify-content: center;
     width: 100%;
     /* border: #202124 solid 1px; */
 }
 
 .home-body-left {
-    width: 70%;
+    height: 600px;
+    width: 60%;
+    margin-right: 2%;
+    border-radius: 40px;
+    display: flex;
+    overflow: hidden;
+    border-radius: 20px 20px 20px 20px;
+    box-shadow: 0 6px 10px -2px rgb(200, 200, 200);
+}
+
+.map-container{
+    width: 100%;
+    height: 100%;
 }
 
 .home-body-right {
