--- a/notify/src/pages/home/Home.css
+++ b/notify/src/pages/home/Home.css
@@ -9,30 +9,29 @@
     display: flex;
     justify-content: center;
     width: 100%;
+    height: 660px;
     /* border: #202124 solid 1px; */
 }
 
 .home-body-left {
-    height: 600px;
-    width: 60%;
+    height: 100%;
+    width: 65%;
     margin-right: 2%;
-    border-radius: 40px;
-    display: flex;
-    overflow: hidden;
-    border-radius: 20px 20px 20px 20px;
-    box-shadow: 0 6px 10px -2px rgb(200, 200, 200);
 }
 
 .map-container{
     width: 100%;
     height: 100%;
+    border-radius: 40px;
+    display: flex;
+    overflow: hidden;
+    border-radius: 20px 20px 20px 20px;
+    /* box-shadow: 0 6px 10px -2px rgb(200, 200, 200); */
 }
 
 .home-body-right {
-    display: flex;
     max-width: 30%;
-    height: 600px;
-    flex-direction: column;
+    height: 100%;
 }
 
 .show-detail-container{
@@ -73,4 +72,12 @@
 .show-detail-body-detail{
     font-size: 14px;
     color: #5F6368;
+}
+
+.mini-map{
+    height: 250px;
+    width: 500px;
+    overflow: hidden;
+    border-radius: 20px 20px 20px 20px;
+    box-shadow: 0 6px 10px -2px rgb(200, 200, 200);
 }
