--- a/notify/src/pages/home/Home.css
+++ b/notify/src/pages/home/Home.css
@@ -20,6 +20,7 @@
 }
 
 .map-container{
+    position: relative;
     width: 100%;
     height: 100%;
     border-radius: 40px;
@@ -29,14 +30,32 @@
     /* box-shadow: 0 6px 10px -2px rgb(200, 200, 200); */
 }
 
+.report-button{
+    position: absolute;
+    width: 130px;
+    height: 50px;
+    border-radius: 40px;
+    background-color: #3D67E4;
+    font-size: 20px;
+    color: #FFF;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
+    right: 62px;
+    bottom: 22px;
+}
+
 .home-body-right {
     max-width: 30%;
-    height: 100%;
+    max-height: 660px;
 }
 
 .show-detail-container{
+    display: flex;
+    flex-direction: column;
     height: 660px;
-    position: relative;
     width: 532px;
     border-radius: 20px 20px 20px 20px;
     box-shadow: 0 6px 10px -2px rgb(200, 200, 200);
@@ -44,6 +63,8 @@
 }
 
 .show-detail-head{
+    padding-top: 5%;
+    padding-left: 5%;
     display: flex;
 }
 
@@ -53,30 +74,47 @@
 }
 
 .title{
+    margin-left: 2%;
     font-weight: bold;
     font-size: 20px;
     color: #202124;
 }
 
 .sub-title{
+    margin-left: 2%;
+    width: 400px;
     font-size: 14px;
     color: #5F6368;
 }
 
 .show-detail-body-title{
+    padding-top: 5%;
+    margin-left: 10%;
     font-weight: 600;
     font-size: 14px;
     color: #202124;
 }
 
 .show-detail-body-detail{
+    padding-top: 1%;
+    margin-left: 10%;
     font-size: 14px;
     color: #5F6368;
 }
 
+.minimap-container{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+
 .mini-map{
-    height: 250px;
-    width: 500px;
+    position: absolute;
+    bottom: 10%;
+    height: 240px;
+    width: 480px;
     overflow: hidden;
     border-radius: 20px 20px 20px 20px;
     box-shadow: 0 6px 10px -2px rgb(200, 200, 200);
