--- a/notify/src/components/navbar.css
+++ b/notify/src/components/navbar.css
@@ -10,7 +10,7 @@
     /* max-width: 990px; */
     height: 60px;
     margin: 0 auto;
-    padding: 0 30px;
+    /* padding: 0 30px; */
     /* border: 1px solid green; */
 
 }
@@ -22,11 +22,11 @@ nav{
 }
 
 .nav-wrapper{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 60px;
-    position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 60px;
+  position: relative;
     /* border: 1px solid green; */
 
 }
@@ -102,7 +102,7 @@ footer{
   .bar1, .bar2, .bar3 {
     width: 35px;
     height: 5px;
-    background-color: white;
+    background-color: black;
     margin: 6px 0;
     transition: 0.4s;
   }
@@ -121,56 +121,6 @@ footer{
   }
   
 
-
-/* Responsive section */
-/* 
-@media only screen and (min-width:361px) and (max-width: 1000px ){
-  .nav-container{
-    padding: 0 30px;
-
-  }
-} */
-
-@media only screen and (max-width: 360px){
-
-    nav{
-        /* background-color: aqua; */
-    }
-    .nav-menu{
-        display: none;
-        width: 100%;
-    }
-    /* .nav-wrapper{
-        padding: 1rem;
-        height: auto;
-        flex-direction: column;
-        align-items: flex-start;
-    }
-    .menu li{
-        margin: 1rem 0;
-        padding: 1rem 0.5rem;
-    
-    }
-
-    .menu li:hover{
-        background-color: #2a2a2a;
-    }
-
-    .menu-active{
-        display: block !important;
-      } */
-}
-/* 
-@media only screen and (min-width: 361px){
-    .ham-menu{
-        display: none;
-    }
-} */
-
-.nav-dropdown {
-  float: left;
-  overflow: hidden;
-}
 
 /* Dropdown button */
 .nav-dropdown .nav-dropbtn {
@@ -224,3 +174,39 @@ footer{
     display: block;
     transition: transform 150ms;
   }
+
+  /* Responsive section */
+@media only screen and (max-width: 550px){
+  .nav-menu{
+      display: none;
+      width: 100%;
+  }
+  .nav-wrapper{
+      padding: 1rem;
+      height: auto;
+      flex-direction: column;
+      align-items: flex-start;
+      background-color: white;
+      /* border: 1px solid red;  */
+  }
+  .nav-menu li{
+      margin: 1rem 0;
+      padding: 1rem 0.5rem;
+  
+  }
+
+  .nav-menu li:hover{
+      background-color: rgb(193, 191, 191);
+
+  }
+
+  .menu-active{
+      display: block !important;
+    }
+}
+
+@media only screen and (min-width: 551px){
+  .ham-menu{
+      display: none;
+  }
+}
