--- a/notify/src/pages/register-page/Register.css
+++ b/notify/src/pages/register-page/Register.css
@@ -11,12 +11,13 @@
 .register-box{
     margin-top: 100px;
     width: 505px;
-    height: 660px;
+    min-height: 660px;
     flex-shrink: 0;
 
     border-radius: 20px;
     background: #FFF;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    height: auto;
 }
 
 .register-box-container{
@@ -28,6 +29,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    flex-grow: 1;
+    margin-bottom: 30px;
 }
 
 .register-box-container form{
