--- a/notify/src/components/ImageSlider.css
+++ b/notify/src/components/ImageSlider.css
@@ -3,9 +3,10 @@
 .slide-container {
   position: relative;
   width: 100%;
-  height: 480px;
+  /* max-height: 600px; */
   height: 75%;
-  /* background-color: aqua; */
+  /* border: 1px solid red ; */
+  /* overflow: hidden;   */
 }
 
 .slider {
@@ -13,39 +14,55 @@
   overflow: hidden;
   margin-left: auto;
   margin-right: auto;
-  height: 100%;
+  height: auto;
+  max-height: 400px;
   width: 100%;
   background-color: white;
 }
 
 .slides {
   width: 100%;
-  height: 420px;
+  max-height: 480px;
   display: flex;
   transition: 2s;
+  /* border: 1px solid green; */
 }
 
 .slide {
   width: 100%;
+  max-height: 480px;
+  /* border: 1px solid blue; */
+ 
 }
 
 .slide:not(.active) {
   display: none;
 }
 
-.slide img {
+/* .slide img {
   object-fit: contain;
   object-position: center center;
-  max-width: 750px;
+  height: 480px;
+  overflow: hidden;
+} */
+
+.slider-image{
+  width: 100%;
+  height: 400px;
+  /* border: 1px solid blue; */
+  object-fit: cover;
 }
 
 .description {
-  height: 60px;
+  height: 80px;
   width: 100%;
   border-radius: 0px 0px 20px 20px;
   box-shadow: 0 4px 2px -2px rgb(200, 200, 200);
   display: flex;
   justify-content: center;  
+  padding: 5px 1rem 5px 1rem;
+  /* border: 1px solid red; */
+  /* margin-top: 10px; */
 }
 
 .description-paragraph {
