--- a/notify/src/pages/Emergency/emergency.css
+++ b/notify/src/pages/Emergency/emergency.css
@@ -79,7 +79,9 @@
   /* This will center the grid horizontally if there is extra space in the container */
   width: 100%;
   max-width: 1500px;
-  margin: 8rem auto 0 auto;
+  margin: 8rem auto 40px auto;
+  padding: 0 1rem;
+
   /*border: 1px solid red;*/
 }
 
@@ -137,5 +139,20 @@
   text-align: center;
 }
 
-
 /* You can add more styles as needed */
+@media screen and (min-width: 1101px) and (max-width: 1500px){
+  .emergency-gallery-container{
+    border: 1px solid red;
+    max-width: 1200px;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  
+}
+@media screen and (max-width: 1100px){
+  .emergency-gallery-container{
+    border: 1px solid gold;
+    grid-template-columns: 1fr 1fr;
+    /* max-width: 1100px; */
+    
+  }
+}
