--- a/notify/src/components/Footer.css
+++ b/notify/src/components/Footer.css
@@ -1,9 +1,10 @@
 /* Footer.css */
 .footer {
+  margin-top: 2rem;
     background-color: #fafafa;
     border-top: 1px solid #e5e7eb;
     padding: 1rem 0;
-
+    bottom: 0;
   }
   
   .footer-content {
